@@ -17,6 +17,7 @@ Version 1.0.8 To be released
 - Bug: Fixed an issue in CNumberFormatter which incorrectly cached parsed formats (Qiang)
 - New #424: Improved CCaptcha to allow clicking on CAPTCHA image to refresh it (Qiang)
 - New #425: Added defaultParams option to the rules used by CUrlManager (Qiang)
+- New #426: Added CApplication::setExtensionPath() (Qiang)
 - New #436: Added error templates in Russian (idlesign)
 - New #467: Improved the algorithm for determining script URL by CHttpRequest (Qiang)
 - New #480: Improved CUniqueValidator to allow specifying AR class and attribute to validate against (Qiang)
@@ -31,6 +32,7 @@ Version 1.0.8 To be released
 - New: Added CExistValidator.criteria property (Qiang)
 - New: Improved CHtml::statefulForm() to make it XHTML-compliant (Qinag)
 - New: Added CBaseUserIdentity::clearState() (Qiang)
+- New: Added 'ext' root path alias which points to the directory containing all extensions (Qiang)
 - Chg #479: Imported path aliases now have precedence over existing include paths (Qiang)
 - Chg: Modified the count() method of relational AR to support counting composite keys (Qiang)
 - Chg: Reverted back the support for assigning a related object to an AR object (Qiang)
